--- a/css/style.css
+++ b/css/style.css
@@ -656,11 +656,11 @@ label {
 .portfolio-content > h3 {
     font-size: 20px;
     font-weight: 700;
-    color: #313131;
+    color: #fff;
 }
 .portfolio-content > span {
     font-size: 16px;
-    color: #313131;
+    color: #fff;
 }
 
 .portfolio-content .icon {
@@ -673,10 +673,10 @@ label {
     height: 40px;
     display: inline-block;
     font-size: 16px;
-    color: #313131;
+    color: #fff;
     text-align: center;
     line-height: 40px;
-    border: 1px solid #313131;
+    border: 1px solid #fff;
     transition: all 0.3s ease 0s;
     -webkit-transition: all 0.3s ease 0s;
     -ms-transition: all 0.3s ease 0s;
@@ -744,3 +744,90 @@ label {
     color: #fff;
 }
 /* Counter end */
+
+
+/* Blog area css start */
+.blog-title span {
+    font-size: 16px;
+    color: #fe5f13;
+    line-height: 30px;
+    border-bottom: 1px solid #fe5f13;
+    margin-bottom: 20px;
+    display: inline-block;
+}
+
+.blog-title h3 {
+    font-size: 38px;
+    line-height: 50px;
+    margin-bottom: 20px;
+    font-weight: 700;
+    color: #313131;
+}
+
+.blog-post-box {
+    cursor: pointer;
+    border: 1px solid #f9f9f9;
+    box-shadow: 0px 0px 10px #eee;
+}
+
+.blog-post-content {
+    padding: 10px 10px;
+}
+
+.blog-post-content h2 {
+    font-size: 20px;
+    line-height: 35px;
+    font-weight: 700;
+    color: #313131;
+    margin-bottom: 10;
+}
+
+.blog-post-content p {
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 400;
+    color: #313131;
+    margin-bottom: 0;
+}
+
+.blog-post-img {
+    width: 100%;
+}
+
+.blog-post-img img {
+    width: 100%;
+}
+
+.post-meta {
+    padding: 15px 10px;
+    margin-top: 5px;
+    background: #eee;
+    position: relative;
+    overflow: hidden;
+}
+
+.post-meta ul {list-style: none;}
+
+.post-meta ul li {
+    display: inline-block;
+}
+
+.post-meta ul li a {
+    color: #313131;
+    font-size: 12px;
+    font-weight: 400;
+}
+
+.post-meta ul li:last-child {
+    text-align: right;
+    float: right;
+    z-index: 999;
+}
+.post-meta ul li:last-child a {
+    background: #fe5f13;
+    padding: 20px 20px;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+/* Blog area css end */
